Adapt tests and import scripts